2005-06-11	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences.c, terminal/terminal-screen.c: Apply
	  mouse autohide patch from Kir Kolyshkin <kir@sacred.ru>. This fixes
	  bug #88.
	* THANKS: Add Kir Kolyshkin <kir@sacred.ru> here.
	* doc/C/Terminal.xml.in: Add documentation for the new hidden option
	  MiscMouseAutohide.

2005-06-11	Benedikt Meurer <benny@xfce.org>

	* THANKS, configure.ac, po/hu.po, terminal/terminal-window.c: Add hu
	  translations, thanks to Szervác Attila <sas@321.hu>.
	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.

2005-03-24	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c: Work-around the problem where
	  gtk_ui_manager_get_widget() does return a valid widget, which
	  is not a GtkMenuItem.

2005-03-19	Benedikt Meurer <benny@xfce.org>

	* configure.ac, NEWS: Bump version to 0.2.5cvs.
	* po/: Sync with source file changes.
	* terminal/terminal-shortcut-editor.c, terminal/terminal-preferences.c:
	  Allow users to assign a keyboard shortcut to open the Preferred
	  Applications dialog.
	* terminal/terminal-window.c: Actually connect the Help button in the
	  Preferred Applications dialog.

2005-03-19	Benedikt Meurer <benny@xfce.org>

	* configure.ac, NEWS: Version 0.2.4.
	* terminal/terminal-helper-dialog.c, terminal/Makefile.am: Use
	  Terminal's bindir as default location for the Browse... dialog.
	* terminal/terminal-helper-dialog.c(browse_clicked): Use Ok instead
	  of Open for the Browse... dialog, since we don't open anything here.
	* terminal/terminal-helper-dialog.c(terminal_helper_dialog_init): Make
	  sure the descriptions are aligned properly.
	* Terminal.1: Update the manual page.
	* THANKS: Add Andrew Conkling <andrewski@fr.st> as documentation writer.
	* po/de.po: Update german translations.
	* po/Terminal.pot: Update the .pot file.
	* doc/: Update the documentation, with help from Andrew Conkling
	  <andrewski@fr.st>.
