@@ -1,5 +1,10 @@
 2005-06-11	Benedikt Meurer <benny@xfce.org>
 
+	* terminal/main.c: Apply Daichi's patch to fix the encoding related
+	  problems with the --help output. This fixes #72.
+
+2005-06-11	Benedikt Meurer <benny@xfce.org>
+
 	* terminal/terminal-preferences.c, terminal/terminal-screen.c: Apply
 	  mouse autohide patch from Kir Kolyshkin <kir@sacred.ru>. This fixes
 	  bug #88.
